remove bold from anchor in admonition and fix right nav alignment

--- a/docs/assets/scss/_admonition.scss
+++ b/docs/assets/scss/_admonition.scss
@@ -6,10 +6,6 @@
   }
 }
 
-.admonition a {
-  font-weight: 700;
-}
-
 main .td-content .admonition {
   margin: 20px 0 0 0;
   padding: 25px 32px 30px;
